--- a/pom.xml
+++ b/pom.xml
@@ -10,25 +10,47 @@
     <name>paw2023a</name>
 
     <properties>
-        <spring.version>4.2.5.RELEASE</spring.version>
+        <!-- Spring -->
+        <spring.version>4.3.12.RELEASE</spring.version>
         <spring-security.version>4.2.5.RELEASE</spring-security.version>
+        <!-- Mailing -->
+        <org.thymeleaf.version>3.0.15.RELEASE</org.thymeleaf.version>
+        <javax.version>1.4.7</javax.version>
+        <!-- Persistence -->
         <org.postgresql.version>42.2.5</org.postgresql.version>
-        <javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
-        <org.hibernate-validator.version>5.1.0.Final</org.hibernate-validator.version>
         <org.hibernate.version>5.1.0.Final</org.hibernate.version>
-        <hibernate-orm.version>5.1.0.Final</hibernate-orm.version>
+        <org.hibernate.jpa.version>1.0.0.Final</org.hibernate.jpa.version>
+        <commons.io.version>2.13.0</commons.io.version>
+        <!-- Servlet -->
+        <servlet-api.version>2.5</servlet-api.version>
+        <!-- Jersey-->
+        <jersey.version>3.0-SNAPSHOT</jersey.version>
+        <eclipse.persistence.version>2.7.2</eclipse.persistence.version>
+        <hk2.glassfish.version>2.5.0-b05</hk2.glassfish.version>
+        <javax.api.version>2.1</javax.api.version>
+        <!-- Testing -->
+        <junit.version>4.13.2</junit.version>
         <mockito.version>2.25.1</mockito.version>
         <org.hsqldb.version>2.3.1</org.hsqldb.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <!-- Logging -->
         <org.slf4j.version>1.7.5</org.slf4j.version>
         <logback.version>1.1.2</logback.version>
         <logback-ext-spring.version>0.1.1</logback-ext-spring.version>
-        <maven-war-plugin.version>2.6</maven-war-plugin.version>
-        <org.hibernate.jpa.version>1.0.0.Final</org.hibernate.jpa.version>
-        <jersey.version>3.0-SNAPSHOT</jersey.version>
+        <!-- Validation-->
+        <javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
+        <org.hibernate-validator.version>5.1.0.Final</org.hibernate-validator.version>
+        <!-- Authentication-->
         <jjwt.version>0.7.0</jjwt.version>
+        <com.fasterxml.jackson.version>2.16.1</com.fasterxml.jackson.version>
+        <!-- Misc -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven-war-plugin.version>2.6</maven-war-plugin.version>
+
+        <!-- Removable-->
+        <commons.version>1.4</commons.version>
+        <jstl.version>1.2</jstl.version>
     </properties>
 
     <repositories>
@@ -44,6 +66,7 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- Spring -->
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-webmvc</artifactId>
@@ -52,6 +75,11 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
                 <version>${spring.version}</version>
             </dependency>
             <dependency>
@@ -66,21 +94,53 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-core</artifactId>
+                <version>${spring-security.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-web</artifactId>
+                <version>${spring-security.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-config</artifactId>
+                <version>${spring-security.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-taglibs</artifactId>
+                <version>${spring-security.version}</version>
+            </dependency>
+            <!-- Removable -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-tx</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+
+            <!-- Servlet -->
+            <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>servlet-api</artifactId>
-                <version>2.5</version>
+                <version>${servlet-api.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>jstl</artifactId>
-                <version>1.2</version>
+                <version>${jstl.version}</version>
             </dependency>
+
+            <!-- Validation -->
             <dependency>
                 <groupId>javax.validation</groupId>
                 <artifactId>validation-api</artifactId>
                 <version>${javax.validation-api.version}</version>
             </dependency>
+
+            <!-- Persistence -->
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-validator</artifactId>
@@ -98,9 +158,42 @@
                 <version>${org.postgresql.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-orm</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${org.hibernate.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-entitymanager</artifactId>
+                <version>${org.hibernate.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate.javax.persistence</groupId>
+                <artifactId>hibernate-jpa-2.1-api</artifactId>
+                <version>${org.hibernate.jpa.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-java8</artifactId>
+                <version>${org.hibernate.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons.io.version}</version>
+                <scope>compile</scope>
+            </dependency>
+
+            <!-- Testing -->
+            <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.13.2</version>
+                <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -115,11 +208,8 @@
                 <version>${org.hsqldb.version}</version>
                 <scope>test</scope>
             </dependency>
-            <dependency>
-                <groupId>commons-fileupload</groupId>
-                <artifactId>commons-fileupload</artifactId>
-                <version>1.4</version>
-            </dependency>
+
+            <!-- Mailing -->
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context-support</artifactId>
@@ -128,28 +218,15 @@
             <dependency>
                 <groupId>javax.mail</groupId>
                 <artifactId>mail</artifactId>
-                <version>1.4.7</version>
+                <version>${javax.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.thymeleaf</groupId>
                 <artifactId>thymeleaf-spring4</artifactId>
-                <version>3.0.15.RELEASE</version>
+                <version>${org.thymeleaf.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-core</artifactId>
-                <version>${spring-security.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-web</artifactId>
-                <version>${spring-security.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-config</artifactId>
-                <version>${spring-security.version}</version>
-            </dependency>
+
+            <!-- Logging -->
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
@@ -176,32 +253,8 @@
                 <version>${logback-ext-spring.version}</version>
                 <scope>runtime</scope>
             </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-orm</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-core</artifactId>
-                <version>${org.hibernate.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-entitymanager</artifactId>
-                <version>${org.hibernate.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hibernate.javax.persistence</groupId>
-                <artifactId>hibernate-jpa-2.1-api</artifactId>
-                <version>${org.hibernate.jpa.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-java8</artifactId>
-                <version>${hibernate-orm.version}</version>
-            </dependency>
-            <!-- JERSEY -->
+
+            <!-- Jersey -->
             <dependency>
                 <groupId>org.glassfish.jersey.containers</groupId>
                 <artifactId>jersey-container-servlet-core</artifactId>
@@ -222,7 +275,7 @@
             <dependency>
                 <groupId>org.glassfish.hk2</groupId>
                 <artifactId>hk2</artifactId>
-                <version>2.5.0-b05</version> <!-- última versión compatible con Java 8 -->
+                <version>${hk2.glassfish.version}</version> <!-- última versión compatible con Java 8 -->
             </dependency>
             <dependency>
                 <groupId>org.glassfish.jersey.ext</groupId>
@@ -240,7 +293,6 @@
                     </exclusion>
                 </exclusions>
             </dependency>
-            <!-- JERSEY JSON -->
             <dependency>
                 <groupId>org.glassfish.jersey.media</groupId>
                 <artifactId>jersey-media-moxy</artifactId>
@@ -253,11 +305,10 @@
                     </exclusion>
                 </exclusions>
             </dependency>
-            <!-- Java 10 compatible -->
             <dependency>
                 <groupId>org.eclipse.persistence</groupId>
                 <artifactId>org.eclipse.persistence.moxy</artifactId>
-                <version>2.7.2</version>
+                <version>${eclipse.persistence.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.glassfish.jersey.media</groupId>
@@ -265,10 +316,17 @@
                 <version>${jersey.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.glassfish.jersey.media</groupId>
+                <artifactId>jersey-media-multipart</artifactId>
+                <version>${jersey.version}</version>
+            </dependency>
+            <!-- For PATCH support -->
+            <dependency>
                 <groupId>javax.ws.rs</groupId>
                 <artifactId>javax.ws.rs-api</artifactId>
-                <version>2.1</version>
+                <version>${javax.api.version}</version>
             </dependency>
+
             <!-- JJWT -->
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
@@ -276,17 +334,28 @@
                 <version>${jjwt.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.glassfish.jersey.media</groupId>
-                <artifactId>jersey-media-multipart</artifactId>
-                <version>${jersey.version}</version>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${com.fasterxml.jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${com.fasterxml.jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${com.fasterxml.jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-xml</artifactId>
+                <version>${com.fasterxml.jackson.version}</version>
             </dependency>
 
-            <dependency>
-                <groupId>commons-io</groupId>
-                <artifactId>commons-io</artifactId>
-                <version>2.13.0</version>
-                <scope>compile</scope>
-            </dependency>
+
+
             <!--ADD DEPENDENCIES HERE-->
         </dependencies>
 
