--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,4 +16,4 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./docker-init.sql:/docker-entrypoint-initdb.d/init.sql
