--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,8 +30,12 @@
     "chalk": "^5.3.0",
     "cheerio": "^1.0.0",
     "date-fns": "^4.1.0",
+    "glob": "^11.0.1",
+    "inflight": "^1.0.6",
+    "jasmine": "^5.5.0",
     "jwt-decode": "^4.0.0",
     "ngx-infinite-scroll": "^17.0.0",
+    "rimraf": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
     "uri-template": "^2.0.0",
