--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -25,8 +25,8 @@
               <goal>install-node-and-npm</goal>
             </goals>
             <configuration>
-              <nodeVersion>v20.9.0</nodeVersion>
-              <npmVersion>10.1.0</npmVersion>
+              <nodeVersion>${node.version}</nodeVersion>
+              <npmVersion>${npm.version}</npmVersion>
             </configuration>
           </execution>
           <execution>
