--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <commons.io.version>2.13.0</commons.io.version>
         <!-- Servlet -->
         <servlet-api.version>2.5</servlet-api.version>
+        <jstl.version>1.2</jstl.version>
         <!-- Jersey-->
         <jersey.version>3.0-SNAPSHOT</jersey.version>
         <eclipse.persistence.version>2.7.2</eclipse.persistence.version>
@@ -42,17 +43,23 @@
         <!-- Authentication-->
         <jjwt.version>0.7.0</jjwt.version>
         <com.fasterxml.jackson.version>2.16.1</com.fasterxml.jackson.version>
+        <!-- Frontend -->
+        <node.version>v20.9.0</node.version>
+        <npm.version>10.1.0</npm.version>
         <!-- Misc -->
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-
-        <frontend.plugin.version>1.12.1</frontend.plugin.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> <maven.compiler.source>1.8</maven.compiler.source> <maven.compiler.target>1.8</maven.compiler.target>
+        <!-- Maven Plugins -->
         <maven-war-plugin.version>2.6</maven-war-plugin.version>
-
-        <!-- Removable-->
-        <commons.version>1.4</commons.version>
-        <jstl.version>1.2</jstl.version>
+        <maven-clean.version>3.1.0</maven-clean.version>
+        <maven-resources.version>3.0.2</maven-resources.version>
+        <maven-compiler.version>3.8.0</maven-compiler.version>
+        <maven-surefire.version>2.22.1</maven-surefire.version>
+        <maven-jar.version>3.0.2</maven-jar.version>
+        <maven-install.version>2.5.2</maven-install.version>
+        <maven-deploy.version>2.8.2</maven-deploy.version>
+        <maven-site.version>3.7.1</maven-site.version>
+        <maven-project-info-reports.version>3.0.0</maven-project-info-reports.version>
+        <frontend.plugin.version>1.12.1</frontend.plugin.version>
     </properties>
 
     <repositories>
@@ -360,6 +367,42 @@
                     <artifactId>frontend-maven-plugin</artifactId>
                     <version>${frontend.plugin.version}</version>
                 </plugin>
+                <plugin>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>${maven-clean.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>${maven-resources.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven-compiler.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven-surefire.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${maven-jar.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>${maven-install.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>${maven-deploy.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>${maven-site.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-project-info-reports-plugin</artifactId>
+                    <version>${maven-project-info-reports.version}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -372,5 +415,4 @@
         <module>services</module>
         <module>frontend</module>
     </modules>
-
 </project>
