--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
     "ng": "ng",
     "extract-i18n": "ngx-translate-extract -i src -o src/assets/i18n/en.json src/assets/i18n/es.json -f namespaced-json",
     "start": "ng serve",
+    "build:prod": "ng build",
     "build": "ng build",
+    "build:dev": "ng build --configuration development",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
