--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -18,6 +18,7 @@
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
+        <version>${frontend.plugin.version}</version>
         <executions>
           <execution>
             <id>install node and npm</id>
@@ -29,6 +30,7 @@
               <npmVersion>${npm.version}</npmVersion>
             </configuration>
           </execution>
+
           <execution>
             <id>npm install</id>
             <goals>
@@ -38,8 +40,9 @@
               <arguments>install</arguments>
             </configuration>
           </execution>
+
           <execution>
-            <id>npm run build</id>
+            <id>npm run build (prod)</id>
             <goals>
               <goal>npm</goal>
             </goals>
@@ -51,4 +54,38 @@
       </plugin>
     </plugins>
   </build>
+
+  <!--  Profile for dev build  -->
+  <profiles>
+    <profile>
+      <id>dev</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.github.eirslett</groupId>
+            <artifactId>frontend-maven-plugin</artifactId>
+            <version>${frontend.plugin.version}</version>
+            <executions>
+              <execution>
+                <id>npm run build (prod)</id>
+                <configuration>
+                  <skip>true</skip>
+                </configuration>
+              </execution>
+
+              <execution>
+                <id>npm run build (dev)</id>
+                <goals>
+                  <goal>npm</goal>
+                </goals>
+                <configuration>
+                  <arguments>run build:dev</arguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
